--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,3 @@
-<nz-layout class="layout">
-  <header></header>
-  <nz-content style="padding:0 50px; min-height: 480px">
-      <!-- <breadcrumb></breadcrumb> -->
-      <nz-breadcrumb>
-        <nz-breadcrumb-item>
-          Home
-        </nz-breadcrumb-item>
-        <nz-breadcrumb-item>
-          <a>Application List</a>
-        </nz-breadcrumb-item>
-        <nz-breadcrumb-item>
-          An Application
-        </nz-breadcrumb-item>
-      </nz-breadcrumb>
-      <router-outlet></router-outlet>
-  </nz-content>
-  <footer></footer>
-</nz-layout>
+<!-- <nz-root> -->
+  <home></home>
+<!-- </nz-root> -->
